# iara

./: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_PLAN_CONTINUATION.md  LICENSE  Makefile  README.md  TUTORIAL.md  alembic.ini  comandos.txt  docker-compose.yml  pyproject.toml  setup.cfg  ui.py
.streamlit/: config.toml
docs/: INVARIANTS.md  architecture.md  configuration.md  der.md  g0_kickoff_template.md  gate_acceptance_checklists.md  rollback.md  runbook.md  secrets.md
docs/decisions/: OPEN_DECISIONS.md
docs/evidence/: invariants_gate_report.md
documentation/: IARA_DOCUMENT.txt  IMPLEMENTATION_PLAN.md
migrations/: env.py  script.py.mako
migrations/versions/: 20260605_0001_initial_schema.py  20260608_0002_memory_items_and_command_auth.py  20260614_0003_hitl_holds.py  20260623_0004_follow_up_queue_and_hitl_context.py  20260623_0005_add_config_data_to_versions.py
pages/: 0_Home.py  1_Chat.py  2_Webhooks.py
scripts/: init_db.sql
src/iara/: __init__.py
src/iara/api/: __init__.py  app.py
src/iara/config/: __init__.py  settings.py
src/iara/config_publishing/: __init__.py  publisher.py  publisher_compat.py  registry.py  schema.py
src/iara/contracts/: __init__.py  audit.py  errors.py  events.py  provider.py  state.py  tenancy.py  tools.py
src/iara/eligibility/: __init__.py  decision.py  normalizer.py
src/iara/graph/: __init__.py  builder.py  edges.py  state.py
src/iara/llm/: __init__.py  factory.py
src/iara/media/: __init__.py  subgraph.py
src/iara/memory/: __init__.py  postgres_store.py  store.py
src/iara/messaging/: __init__.py  consumer.py  publisher.py  topology.py
src/iara/observability/: __init__.py  logging.py  metrics.py
src/iara/persistence/: __init__.py  checkpointer.py  database.py  models.py
src/iara/provider/: __init__.py  adapter.py  capability.py  error_mapper.py  readback.py
src/iara/security/: __init__.py  blocklist.txt  command_auth.py  content_filter.py  guards.py  redaction.py
src/iara/tenancy/: __init__.py  postgres_repository.py  resolver.py
src/iara/tools/: __init__.py  executor.py  gateway.py  policy_guard.py  registry.py  skill_resolver.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  synthetic_events.py
tests/integration/: __init__.py  test_idempotency.py
tests/security/: __init__.py  test_cross_tenant.py  test_fail_closed.py  test_mcp_isolation.py  test_policy_guards.py  test_production_guard.py  test_redaction.py
tests/unit/: __init__.py  test_catalog_tools.py  test_contracts.py  test_eligibility.py  test_executor.py  test_gaps_6_to_10.py  test_graph.py  test_messaging.py  test_redaction.py  test_settings.py  test_tools.py
(+54 files in other folders)
