[project]
name = "iara"
version = "0.1.0"
description = "IAra multi-tenant conversational agent runtime"
requires-python = ">=3.13"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "Digi2B", email = "tech@digi2b.com.br" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "langgraph>=0.2.60",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "anthropic>=0.42.0",
    "mcp>=1.0.0",
    "aio-pika>=9.5.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "structlog>=24.4.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.20",
    "tenacity>=9.0.0",
    "orjson>=3.10.0",
    "pypdf>=5.0.0",
    "langgraph-checkpoint-postgres>=2.0",
    "psycopg[binary,pool]>=3.2",
    "prometheus-client>=0.25.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "testcontainers[postgresql,rabbitmq]>=4.9.0",
    "black>=24.10.0",
    "ruff>=0.8.0",
    "flake8>=7.1.0",
    "mypy>=1.13.0",
    "types-orjson",
    "factory-boy>=3.3.0",
    "respx>=0.21.0",
    "anyio>=4.7.0",
    "streamlit>=1.40.0",
]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "ASYNC", "S"]
ignore = [
    "S101",  # allow assert in tests
    "S105",  # allow hardcoded password-like strings in non-secret contexts
    "A003",  # allow shadowing builtins in field names
    "S104",  # binding to all interfaces — expected in container deployments
    "S110",  # try-except-pass — intentional in certain retry/readback loops
    "A001",  # shadowing builtin at module scope — intentional in error hierarchy
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "N802"]

[tool.mypy]
python_version = "3.13"
strict = true
disallow_untyped_defs = true
warn_unused_ignores = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=src/iara --cov-report=term-missing -v"
markers = [
    "unit: pure unit tests, no external infra",
    "integration: requires testcontainers (postgres/rabbitmq)",
    "security: redaction / fail-closed / cross-tenant invariants",
]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iara"]
